# swc

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: heroku.yml
src/: commands.rs  constants.rs  interaction.rs  lib.rs  main.rs  ytdl.rs
src/music/: commands.rs  mod.rs  query.rs
src/player/: audio.rs  commands.rs  constants.rs  manager.rs  mod.rs  queue.rs  source.rs
src/player/audio/: mod.rs  queue.rs
src/player/conn/: error.rs  mod.rs  payload.rs  rtp.rs
src/player/conn/rtp/: crypto.rs  mod.rs
src/player/ws/: error.rs  mod.rs  payload.rs
src/voice/: constants.rs  error.rs  mod.rs  source.rs  streamer.rs
src/voice/rtp/: crypto.rs  error.rs  mod.rs
src/voice/ws/: error.rs  mod.rs  payload.rs
