[package]
name = "swc"
version = "0.1.0"
authors = ["frostu8 <frostu8@protonmail.com>"]
edition = "2021"

[dependencies]
twilight-model = "0.14"
twilight-http = "0.14"
twilight-gateway = "0.14"
twilight-cache-inmemory = "0.14"
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros", "process", "io-std"] }
async-tungstenite = { version = "0.17", features = ["tokio-runtime", "tokio-rustls-native-certs"] }
tungstenite = "0.17"
serde = "1.0"
serde_repr = "0.1"
serde_json = "1.0"
futures-util = "0.3"
xsalsa20poly1305 = "0.9"
opus = "0.3"
bytemuck = "1.12"

dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
rand = "0.8"
